parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> chunk
Rule 1     chunk -> command_list
Rule 2     command_list -> command command_list
Rule 3     command_list -> empty
Rule 4     command -> ID = exp
Rule 5     command -> FUNCTION ID ( explist ) command_list END
Rule 6     command -> FUNCTION ID expassign
Rule 7     command -> ID ( actual_arg_exp )
Rule 8     command -> WHILE ( exp ) command
Rule 9     command -> IF ( exp ) THEN command_list ELSE command_list END
Rule 10    command -> RETURN exp_list
Rule 11    command -> DO command_list END
Rule 12    command -> FOR command , exp command
Rule 13    command -> PRINT ( exp )
Rule 14    command -> { command_list }
Rule 15    actual_arg_exp -> actual_args
Rule 16    actual_arg_exp -> empty
Rule 17    actual_args -> exp , actual_args
Rule 18    actual_args -> exp
Rule 19    expassign -> empty
Rule 20    expassign -> = exp
Rule 21    explist -> lexp
Rule 22    explist -> empty
Rule 23    lexp -> ID
Rule 24    lexp -> ID , lexp
Rule 25    exp_list -> exp
Rule 26    exp_list -> empty
Rule 27    exp -> NUMBER
Rule 28    exp -> ID
Rule 29    exp -> exp PLUS exp
Rule 30    exp -> exp MINUS exp
Rule 31    exp -> exp TIMES exp
Rule 32    exp -> exp DIVIDE exp
Rule 33    exp -> exp LESSEQUAL exp
Rule 34    exp -> exp GREATEREQUAL exp
Rule 35    exp -> exp LESS exp
Rule 36    exp -> exp GREATER exp
Rule 37    exp -> exp EQUAL exp
Rule 38    exp -> exp NOTEQUAL exp
Rule 39    exp -> MINUS exp
Rule 40    exp -> ( exp )
Rule 41    exp -> ID ( actual_arg_exp )
Rule 42    empty -> <empty>

Terminals, with rules where they appear

(                    : 5 7 8 9 13 40 41
)                    : 5 7 8 9 13 40 41
,                    : 12 17 24
=                    : 4 20
DIVIDE               : 32
DO                   : 11
ELSE                 : 9
END                  : 5 9 11
EQUAL                : 37
FOR                  : 12
FUNCTION             : 5 6
GREATER              : 36
GREATEREQUAL         : 34
ID                   : 4 5 6 7 23 24 28 41
IF                   : 9
LESS                 : 35
LESSEQUAL            : 33
MINUS                : 30 39
NOTEQUAL             : 38
NUMBER               : 27
PLUS                 : 29
PRINT                : 13
RETURN               : 10
THEN                 : 9
TIMES                : 31
WHILE                : 8
error                : 
{                    : 14
}                    : 14

Nonterminals, with rules where they appear

actual_arg_exp       : 7 41
actual_args          : 15 17
chunk                : 0
command              : 2 8 12 12
command_list         : 1 2 5 9 9 11 14
empty                : 3 16 19 22 26
exp                  : 4 8 9 12 13 17 18 20 25 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40
exp_list             : 10
expassign            : 6
explist              : 5
lexp                 : 21 24

Parsing method: LALR

state 0

    (0) S' -> . chunk
    (1) chunk -> . command_list
    (2) command_list -> . command command_list
    (3) command_list -> . empty
    (4) command -> . ID = exp
    (5) command -> . FUNCTION ID ( explist ) command_list END
    (6) command -> . FUNCTION ID expassign
    (7) command -> . ID ( actual_arg_exp )
    (8) command -> . WHILE ( exp ) command
    (9) command -> . IF ( exp ) THEN command_list ELSE command_list END
    (10) command -> . RETURN exp_list
    (11) command -> . DO command_list END
    (12) command -> . FOR command , exp command
    (13) command -> . PRINT ( exp )
    (14) command -> . { command_list }
    (42) empty -> .

    ID              shift and go to state 5
    FUNCTION        shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    PRINT           shift and go to state 12
    {               shift and go to state 13
    $end            reduce using rule 42 (empty -> .)

    chunk                          shift and go to state 1
    command_list                   shift and go to state 2
    command                        shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> chunk .



state 2

    (1) chunk -> command_list .

    $end            reduce using rule 1 (chunk -> command_list .)


state 3

    (2) command_list -> command . command_list
    (2) command_list -> . command command_list
    (3) command_list -> . empty
    (4) command -> . ID = exp
    (5) command -> . FUNCTION ID ( explist ) command_list END
    (6) command -> . FUNCTION ID expassign
    (7) command -> . ID ( actual_arg_exp )
    (8) command -> . WHILE ( exp ) command
    (9) command -> . IF ( exp ) THEN command_list ELSE command_list END
    (10) command -> . RETURN exp_list
    (11) command -> . DO command_list END
    (12) command -> . FOR command , exp command
    (13) command -> . PRINT ( exp )
    (14) command -> . { command_list }
    (42) empty -> .

    ID              shift and go to state 5
    FUNCTION        shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    PRINT           shift and go to state 12
    {               shift and go to state 13
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)
    }               reduce using rule 42 (empty -> .)
    ELSE            reduce using rule 42 (empty -> .)

    command                        shift and go to state 3
    command_list                   shift and go to state 14
    empty                          shift and go to state 4

state 4

    (3) command_list -> empty .

    $end            reduce using rule 3 (command_list -> empty .)
    END             reduce using rule 3 (command_list -> empty .)
    }               reduce using rule 3 (command_list -> empty .)
    ELSE            reduce using rule 3 (command_list -> empty .)


state 5

    (4) command -> ID . = exp
    (7) command -> ID . ( actual_arg_exp )

    =               shift and go to state 15
    (               shift and go to state 16


state 6

    (5) command -> FUNCTION . ID ( explist ) command_list END
    (6) command -> FUNCTION . ID expassign

    ID              shift and go to state 17


state 7

    (8) command -> WHILE . ( exp ) command

    (               shift and go to state 18


state 8

    (9) command -> IF . ( exp ) THEN command_list ELSE command_list END

    (               shift and go to state 19


state 9

    (10) command -> RETURN . exp_list
    (25) exp_list -> . exp
    (26) exp_list -> . empty
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )
    (42) empty -> .

  ! shift/reduce conflict for ID resolved as shift
    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26
    FUNCTION        reduce using rule 42 (empty -> .)
    WHILE           reduce using rule 42 (empty -> .)
    IF              reduce using rule 42 (empty -> .)
    RETURN          reduce using rule 42 (empty -> .)
    DO              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    PRINT           reduce using rule 42 (empty -> .)
    {               reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)
    }               reduce using rule 42 (empty -> .)
    ELSE            reduce using rule 42 (empty -> .)
    ,               reduce using rule 42 (empty -> .)

  ! ID              [ reduce using rule 42 (empty -> .) ]

    exp_list                       shift and go to state 20
    exp                            shift and go to state 21
    empty                          shift and go to state 22

state 10

    (11) command -> DO . command_list END
    (2) command_list -> . command command_list
    (3) command_list -> . empty
    (4) command -> . ID = exp
    (5) command -> . FUNCTION ID ( explist ) command_list END
    (6) command -> . FUNCTION ID expassign
    (7) command -> . ID ( actual_arg_exp )
    (8) command -> . WHILE ( exp ) command
    (9) command -> . IF ( exp ) THEN command_list ELSE command_list END
    (10) command -> . RETURN exp_list
    (11) command -> . DO command_list END
    (12) command -> . FOR command , exp command
    (13) command -> . PRINT ( exp )
    (14) command -> . { command_list }
    (42) empty -> .

    ID              shift and go to state 5
    FUNCTION        shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    PRINT           shift and go to state 12
    {               shift and go to state 13
    END             reduce using rule 42 (empty -> .)

    command_list                   shift and go to state 27
    command                        shift and go to state 3
    empty                          shift and go to state 4

state 11

    (12) command -> FOR . command , exp command
    (4) command -> . ID = exp
    (5) command -> . FUNCTION ID ( explist ) command_list END
    (6) command -> . FUNCTION ID expassign
    (7) command -> . ID ( actual_arg_exp )
    (8) command -> . WHILE ( exp ) command
    (9) command -> . IF ( exp ) THEN command_list ELSE command_list END
    (10) command -> . RETURN exp_list
    (11) command -> . DO command_list END
    (12) command -> . FOR command , exp command
    (13) command -> . PRINT ( exp )
    (14) command -> . { command_list }

    ID              shift and go to state 5
    FUNCTION        shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    PRINT           shift and go to state 12
    {               shift and go to state 13

    command                        shift and go to state 28

state 12

    (13) command -> PRINT . ( exp )

    (               shift and go to state 29


state 13

    (14) command -> { . command_list }
    (2) command_list -> . command command_list
    (3) command_list -> . empty
    (4) command -> . ID = exp
    (5) command -> . FUNCTION ID ( explist ) command_list END
    (6) command -> . FUNCTION ID expassign
    (7) command -> . ID ( actual_arg_exp )
    (8) command -> . WHILE ( exp ) command
    (9) command -> . IF ( exp ) THEN command_list ELSE command_list END
    (10) command -> . RETURN exp_list
    (11) command -> . DO command_list END
    (12) command -> . FOR command , exp command
    (13) command -> . PRINT ( exp )
    (14) command -> . { command_list }
    (42) empty -> .

    ID              shift and go to state 5
    FUNCTION        shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    PRINT           shift and go to state 12
    {               shift and go to state 13
    }               reduce using rule 42 (empty -> .)

    command_list                   shift and go to state 30
    command                        shift and go to state 3
    empty                          shift and go to state 4

state 14

    (2) command_list -> command command_list .

    $end            reduce using rule 2 (command_list -> command command_list .)
    END             reduce using rule 2 (command_list -> command command_list .)
    }               reduce using rule 2 (command_list -> command command_list .)
    ELSE            reduce using rule 2 (command_list -> command command_list .)


state 15

    (4) command -> ID = . exp
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    exp                            shift and go to state 31

state 16

    (7) command -> ID ( . actual_arg_exp )
    (15) actual_arg_exp -> . actual_args
    (16) actual_arg_exp -> . empty
    (17) actual_args -> . exp , actual_args
    (18) actual_args -> . exp
    (42) empty -> .
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    )               reduce using rule 42 (empty -> .)
    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    actual_arg_exp                 shift and go to state 32
    actual_args                    shift and go to state 33
    empty                          shift and go to state 34
    exp                            shift and go to state 35

state 17

    (5) command -> FUNCTION ID . ( explist ) command_list END
    (6) command -> FUNCTION ID . expassign
    (19) expassign -> . empty
    (20) expassign -> . = exp
    (42) empty -> .

    (               shift and go to state 36
    =               shift and go to state 39
    ID              reduce using rule 42 (empty -> .)
    FUNCTION        reduce using rule 42 (empty -> .)
    WHILE           reduce using rule 42 (empty -> .)
    IF              reduce using rule 42 (empty -> .)
    RETURN          reduce using rule 42 (empty -> .)
    DO              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    PRINT           reduce using rule 42 (empty -> .)
    {               reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)
    }               reduce using rule 42 (empty -> .)
    ELSE            reduce using rule 42 (empty -> .)
    ,               reduce using rule 42 (empty -> .)

    expassign                      shift and go to state 37
    empty                          shift and go to state 38

state 18

    (8) command -> WHILE ( . exp ) command
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    exp                            shift and go to state 40

state 19

    (9) command -> IF ( . exp ) THEN command_list ELSE command_list END
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    exp                            shift and go to state 41

state 20

    (10) command -> RETURN exp_list .

    ID              reduce using rule 10 (command -> RETURN exp_list .)
    FUNCTION        reduce using rule 10 (command -> RETURN exp_list .)
    WHILE           reduce using rule 10 (command -> RETURN exp_list .)
    IF              reduce using rule 10 (command -> RETURN exp_list .)
    RETURN          reduce using rule 10 (command -> RETURN exp_list .)
    DO              reduce using rule 10 (command -> RETURN exp_list .)
    FOR             reduce using rule 10 (command -> RETURN exp_list .)
    PRINT           reduce using rule 10 (command -> RETURN exp_list .)
    {               reduce using rule 10 (command -> RETURN exp_list .)
    $end            reduce using rule 10 (command -> RETURN exp_list .)
    END             reduce using rule 10 (command -> RETURN exp_list .)
    }               reduce using rule 10 (command -> RETURN exp_list .)
    ELSE            reduce using rule 10 (command -> RETURN exp_list .)
    ,               reduce using rule 10 (command -> RETURN exp_list .)


state 21

    (25) exp_list -> exp .
    (29) exp -> exp . PLUS exp
    (30) exp -> exp . MINUS exp
    (31) exp -> exp . TIMES exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . LESSEQUAL exp
    (34) exp -> exp . GREATEREQUAL exp
    (35) exp -> exp . LESS exp
    (36) exp -> exp . GREATER exp
    (37) exp -> exp . EQUAL exp
    (38) exp -> exp . NOTEQUAL exp

    ID              reduce using rule 25 (exp_list -> exp .)
    FUNCTION        reduce using rule 25 (exp_list -> exp .)
    WHILE           reduce using rule 25 (exp_list -> exp .)
    IF              reduce using rule 25 (exp_list -> exp .)
    RETURN          reduce using rule 25 (exp_list -> exp .)
    DO              reduce using rule 25 (exp_list -> exp .)
    FOR             reduce using rule 25 (exp_list -> exp .)
    PRINT           reduce using rule 25 (exp_list -> exp .)
    {               reduce using rule 25 (exp_list -> exp .)
    $end            reduce using rule 25 (exp_list -> exp .)
    END             reduce using rule 25 (exp_list -> exp .)
    }               reduce using rule 25 (exp_list -> exp .)
    ELSE            reduce using rule 25 (exp_list -> exp .)
    ,               reduce using rule 25 (exp_list -> exp .)
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45
    LESSEQUAL       shift and go to state 46
    GREATEREQUAL    shift and go to state 47
    LESS            shift and go to state 48
    GREATER         shift and go to state 49
    EQUAL           shift and go to state 50
    NOTEQUAL        shift and go to state 51


state 22

    (26) exp_list -> empty .

    ID              reduce using rule 26 (exp_list -> empty .)
    FUNCTION        reduce using rule 26 (exp_list -> empty .)
    WHILE           reduce using rule 26 (exp_list -> empty .)
    IF              reduce using rule 26 (exp_list -> empty .)
    RETURN          reduce using rule 26 (exp_list -> empty .)
    DO              reduce using rule 26 (exp_list -> empty .)
    FOR             reduce using rule 26 (exp_list -> empty .)
    PRINT           reduce using rule 26 (exp_list -> empty .)
    {               reduce using rule 26 (exp_list -> empty .)
    $end            reduce using rule 26 (exp_list -> empty .)
    END             reduce using rule 26 (exp_list -> empty .)
    }               reduce using rule 26 (exp_list -> empty .)
    ELSE            reduce using rule 26 (exp_list -> empty .)
    ,               reduce using rule 26 (exp_list -> empty .)


state 23

    (27) exp -> NUMBER .

    PLUS            reduce using rule 27 (exp -> NUMBER .)
    MINUS           reduce using rule 27 (exp -> NUMBER .)
    TIMES           reduce using rule 27 (exp -> NUMBER .)
    DIVIDE          reduce using rule 27 (exp -> NUMBER .)
    LESSEQUAL       reduce using rule 27 (exp -> NUMBER .)
    GREATEREQUAL    reduce using rule 27 (exp -> NUMBER .)
    LESS            reduce using rule 27 (exp -> NUMBER .)
    GREATER         reduce using rule 27 (exp -> NUMBER .)
    EQUAL           reduce using rule 27 (exp -> NUMBER .)
    NOTEQUAL        reduce using rule 27 (exp -> NUMBER .)
    ID              reduce using rule 27 (exp -> NUMBER .)
    FUNCTION        reduce using rule 27 (exp -> NUMBER .)
    WHILE           reduce using rule 27 (exp -> NUMBER .)
    IF              reduce using rule 27 (exp -> NUMBER .)
    RETURN          reduce using rule 27 (exp -> NUMBER .)
    DO              reduce using rule 27 (exp -> NUMBER .)
    FOR             reduce using rule 27 (exp -> NUMBER .)
    PRINT           reduce using rule 27 (exp -> NUMBER .)
    {               reduce using rule 27 (exp -> NUMBER .)
    $end            reduce using rule 27 (exp -> NUMBER .)
    END             reduce using rule 27 (exp -> NUMBER .)
    }               reduce using rule 27 (exp -> NUMBER .)
    ELSE            reduce using rule 27 (exp -> NUMBER .)
    ,               reduce using rule 27 (exp -> NUMBER .)
    )               reduce using rule 27 (exp -> NUMBER .)


state 24

    (28) exp -> ID .
    (41) exp -> ID . ( actual_arg_exp )

    PLUS            reduce using rule 28 (exp -> ID .)
    MINUS           reduce using rule 28 (exp -> ID .)
    TIMES           reduce using rule 28 (exp -> ID .)
    DIVIDE          reduce using rule 28 (exp -> ID .)
    LESSEQUAL       reduce using rule 28 (exp -> ID .)
    GREATEREQUAL    reduce using rule 28 (exp -> ID .)
    LESS            reduce using rule 28 (exp -> ID .)
    GREATER         reduce using rule 28 (exp -> ID .)
    EQUAL           reduce using rule 28 (exp -> ID .)
    NOTEQUAL        reduce using rule 28 (exp -> ID .)
    ID              reduce using rule 28 (exp -> ID .)
    FUNCTION        reduce using rule 28 (exp -> ID .)
    WHILE           reduce using rule 28 (exp -> ID .)
    IF              reduce using rule 28 (exp -> ID .)
    RETURN          reduce using rule 28 (exp -> ID .)
    DO              reduce using rule 28 (exp -> ID .)
    FOR             reduce using rule 28 (exp -> ID .)
    PRINT           reduce using rule 28 (exp -> ID .)
    {               reduce using rule 28 (exp -> ID .)
    $end            reduce using rule 28 (exp -> ID .)
    END             reduce using rule 28 (exp -> ID .)
    }               reduce using rule 28 (exp -> ID .)
    ELSE            reduce using rule 28 (exp -> ID .)
    ,               reduce using rule 28 (exp -> ID .)
    )               reduce using rule 28 (exp -> ID .)
    (               shift and go to state 52


state 25

    (39) exp -> MINUS . exp
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    exp                            shift and go to state 53

state 26

    (40) exp -> ( . exp )
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    exp                            shift and go to state 54

state 27

    (11) command -> DO command_list . END

    END             shift and go to state 55


state 28

    (12) command -> FOR command . , exp command

    ,               shift and go to state 56


state 29

    (13) command -> PRINT ( . exp )
    (27) exp -> . NUMBER
    (28) exp -> . ID
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp TIMES exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp LESSEQUAL exp
    (34) exp -> . exp GREATEREQUAL exp
    (35) exp -> . exp LESS exp
    (36) exp -> . exp GREATER exp
    (37) exp -> . exp EQUAL exp
    (38) exp -> . exp NOTEQUAL exp
    (39) exp -> . MINUS exp
    (40) exp -> . ( exp )
    (41) exp -> . ID ( actual_arg_exp )

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 26

    exp                            shift and go to state 57

state 30

    (14) command -> { command_list . }

    }               shift and go to state 58


state 31

    (4) command -> ID = exp .
    (29) exp -> exp . PLUS exp
    (30) exp -> exp . MINUS exp
    (31) exp -> exp . TIMES exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . LESSEQUAL exp
    (34) exp -> exp . GREATEREQUAL exp
    (35) exp -> exp . LESS exp
    (36) exp -> exp . GREATER exp
    (37) exp -> exp . EQUAL exp
    (38) exp -> exp . NOTEQUAL exp

    ID              reduce using rule 4 (command -> ID = exp .)
    FUNCTION        reduce using rule 4 (command -> ID = exp .)
    WHILE           reduce using rule 4 (command -> ID = exp .)
    IF              reduce using rule 4 (command -> ID = exp .)
    RETURN          reduce using rule 4 (command -> ID = exp .)
    DO              reduce using rule 4 (command -> ID = exp .)
    FOR             reduce using rule 4 (command -> ID = exp .)
    PRINT           reduce using rule 4 (command -> ID = exp .)
    {               reduce using rule 4 (command -> ID = exp .)
    $end            reduce using rule 4 (command -> ID = exp .)
    END             reduce using rule 4 (command -> ID = exp .)
    }               reduce using rule 4 (command -> ID = exp .)
    ELSE            reduce using rule 4 (command -> ID = exp .)
    ,               reduce using rule 4 (command -> ID = exp .)
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45
    LESSEQUAL       shift and go to state 46
    GREATEREQUAL    shift and go to state 47
    LESS            shift and go to state 48
    GREATER         shift and go to state 49
    EQUAL           shift and go to state 50
    NOTEQUAL        shift and go to state 51


state 32

    (7) command -> ID ( actual_arg_exp . )

    )               shift and go to state 59


state 33

    (15) actual_arg_exp -> actual_args .

    )               reduce using rule 15 (actual_arg_exp -> actual_args .)


state 34

    (16) actual_arg_exp -> empty .

    )               reduce using rule 16 (actual_arg_exp -> empty .)


state 35

    (17) actual_args -> exp . , actual_args
    (18) actual_args -> exp .
    (29) exp -> exp . PLUS exp
    (30) exp -> exp . MINUS exp
    (31) exp -> exp . TIMES exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . LESSEQUAL exp
    (34) exp -> exp . GREATEREQUAL exp
    (35) exp -> exp . LESS exp
    (36) exp -> exp . GREATER exp
    (37) exp -> exp . EQUAL exp
    (38) exp -> exp . NOTEQUAL exp

    ,               shift and go to state 60
    )               reduce using rule 18 (actual_args -> exp .)
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45
    LESSEQUAL       shift and go to state 46
